{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 121,
  "lineage": "da02a0cd-b883-ece6-8921-a2c35036e4d8",
  "resources": [
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:internet-gateway/igw-0024a83b8b57e55c6",
            "id": "igw-0024a83b8b57e55c6",
            "owner_id": "375111493668",
            "vpc_id": "vpc-067e4af025a4d5384"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:route-table/rtb-0d16fb9026f448b01",
            "id": "rtb-0d16fb9026f448b01",
            "owner_id": "375111493668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0024a83b8b57e55c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-067e4af025a4d5384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44ec3368d4b9a97",
            "route_table_id": "rtb-0d16fb9026f448b01",
            "subnet_id": "subnet-07fcd0c060f8524c3"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub01",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ce1f85808d52216",
            "route_table_id": "rtb-0d16fb9026f448b01",
            "subnet_id": "subnet-0780343d4b9e11450"
          },
          "dependencies": [
            "module.clustering.aws_internet_gateway.intgate",
            "module.clustering.aws_route_table.pubrt",
            "module.clustering.aws_subnet.pubsub02",
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:security-group/sg-006b2c07fcf89d804",
            "description": "This is to allow server to outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006b2c07fcf89d804",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devsgforkube",
            "name_prefix": "",
            "owner_id": "375111493668",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067e4af025a4d5384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:subnet/subnet-07fcd0c060f8524c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-07fcd0c060f8524c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375111493668",
            "tags": {
              "Name": "dev-pubsub01"
            },
            "tags_all": {
              "Name": "dev-pubsub01"
            },
            "vpc_id": "vpc-067e4af025a4d5384"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:subnet/subnet-0780343d4b9e11450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-0780343d4b9e11450",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375111493668",
            "tags": {
              "Name": "dev-pubsub02"
            },
            "tags_all": {
              "Name": "dev-pubsub02"
            },
            "vpc_id": "vpc-067e4af025a4d5384"
          },
          "dependencies": [
            "module.clustering.aws_vpc.kubevpc"
          ]
        }
      ]
    },
    {
      "module": "module.clustering",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:375111493668:vpc/vpc-067e4af025a4d5384",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d58e9797b41da149",
            "default_route_table_id": "rtb-0bc3039311c3c520b",
            "default_security_group_id": "sg-0ba3cea9a783328ff",
            "dhcp_options_id": "dopt-0b71904eb32bc3a82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-067e4af025a4d5384",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc3039311c3c520b",
            "owner_id": "375111493668",
            "tags": {
              "Name": "dev-eks-vpc"
            },
            "tags_all": {
              "Name": "dev-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}